--- a/PhotoFilters/Todo
+++ b/PhotoFilters/Todo
@@ -1,9 +1,6 @@
-4. add new entity to core data to save whatever image was filtered
-
-
+add new entity to core data to save whatever image was filtered
 
 
 
 fix cell sizes in pinch gesture
 
-do the linked list stuff
