add String extension to invalidate certain characters. fix bug with animation being called at the wrong time. set up webview to show github repo when selected from RepoVC.

--- a/GithubbaHubba/GithubbaHubba/Todo
+++ b/GithubbaHubba/GithubbaHubba/Todo
@@ -25,6 +25,7 @@ in searchbar clicked
 resign first responder
 
 
+figure out why there is some weird overlay when I show the user collection presearch
 
 
 read for animation stufff
