--- a/GithubbaHubba/GithubbaHubba/Todo
+++ b/GithubbaHubba/GithubbaHubba/Todo
@@ -1,9 +1,3 @@
-for each VC for repos, users, profile, - move the Oauth check to the viewwillappear (maybe better viewdidappear) rather than in the master VC. this allows them to first view the master VC and then only do the oauth check when they go to the 3 vcs that require authentication
-- consolidate my alert controller setup
-make alert view before app sends user to safari so they know they are going to login to github
-
-
-
 
 get the struct for a singleton networkcontroller. this is added to the NetworkController Class
 //        class var sharedInstance: NetworkController {
@@ -19,6 +13,9 @@ get the struct for a singleton networkcontroller. this is added to the NetworkCo
 
 
 
+in MasterVC
+didSelectRowAtIndexPath - dismiss VC when selecting 1 of 3 cells
+
 
 make searchbar hide when user hits 'enter'
 in searchbar clicked
@@ -26,6 +23,12 @@ resign first responder
 
 
 figure out why there is some weird overlay when I show the user collection presearch
+
+
+WHY does my animatorToSingleUser enlarge the moving image way to the right
+the frame is wrong somehow
+
+
 
 
 read for animation stufff
