made networkcontroller a singleton. need to update the other files that access it

--- a/GithubbaHubba/GithubbaHubba/Todo
+++ b/GithubbaHubba/GithubbaHubba/Todo
@@ -1,4 +1,6 @@
 
+IMPLEMENTED THIS ON USERCOLLECTIONVC AND NEED TO NOW UPDATE THE OTHER FILES THAT ACCESS NETWORKCONTROLLER
+
 get the struct for a singleton networkcontroller. this is added to the NetworkController Class
 //        class var sharedInstance: NetworkController {
 //        struct Static {
@@ -10,6 +12,8 @@ get the struct for a singleton networkcontroller. this is added to the NetworkCo
 //            }
 //            return Static.instance!
 //        }
+
+
 
 
 
