--- a/StackOverFlowed/StackOverFlowed/es.lproj/Localizable.strings
+++ b/StackOverFlowed/StackOverFlowed/es.lproj/Localizable.strings
@@ -1,7 +1,12 @@
 /* 
-  Oshiwambo.strings
+  Localizable.strings
   StackOverFlowed
 
   Created by Parker Lewis on 11/14/14.
   Copyright (c) 2014 CodeFellows. All rights reserved.
 */
+
+
+
+"HOME" = "CASA";
+"LOG IN" = "INICIAR SESIÓN";
